k8s/busybox-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    command: ['sh', '-c', 'echo "Waiting..." && sleep 3600']
  restartPolicy: Never
