k8s/nginx-pod.yml
apiVersion: v1 
kind: Pod 
metadata: 
  name: nginx-pod 
  labels: 
    app: nginx 
spec: 
  containers: 
  - name: nginx-container 
    image: nginx:alpine 
    ports: 
    - containerPort: 80
