k8s/nginx-ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: nginx-ingress 
spec: 
  rules: 
  - host: nginx.local 
    http: 
      paths: 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: nginx-service 
            port: 
              number: 80
